improve responsivity of navbar, try to make it position fixed, huge problem, fix it with top-margin and z-index

--- a/src/features/todos/TodosList.module.css
+++ b/src/features/todos/TodosList.module.css
@@ -2,6 +2,9 @@
     margin: 0 auto;
     padding-inline-start: 0;
     width: 80%;
+    overflow-y: auto;
+    max-height: 70vh;
+    background-color: #eee;
 }
 
 .todo_li_item {
