--- a/src/views/MainLayout.module.css
+++ b/src/views/MainLayout.module.css
@@ -1,3 +1,19 @@
+.main_content {
+    position: relative;
+}
+
+.children {
+    margin-top: 73px;
+}
+
+.fixed_nav_div {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 10;
+
+}
+
 .navigation_div {
     background-color: #333;
     overflow: hidden;
@@ -7,6 +23,58 @@
     width: 80%;
     max-width: 800px;
     margin: 0 auto;
+    position: relative;
+}
+
+.navigation_div_responsive {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
+
+
+}
+
+.navigation_div_responsive .icon{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.navigation_div_responsive .search_container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    border: 1px solid #333;
+    font-size: 17px;
+}
+
+.navigation_div_responsive .search_container form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+.navigation_div_responsive input[type="text"] {
+    padding: 6px;
+    font-size: 17px;
+    border: none;
+    width: 80%;
+}
+
+.navigation_div_responsive .search_container .search_button {
+    padding: 6px 10px;
+    margin-right: 16px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+    width: fit-content;
 }
 
 .nav_button {
@@ -21,6 +89,7 @@
 .nav_button:hover {
     background-color: #ddd;
     color: black;
+    border-bottom: 3px solid red;
 }
 
 .active_button {
@@ -28,6 +97,7 @@
     color: white;
     font-size: 17px;
     padding: 14px 16px;
+    border-bottom: 3px solid red;
 }
 
 .navigation_div .icon {
@@ -76,6 +146,7 @@
         float: right;
         display: block;
         margin-left: auto;
+        margin-right: 10%;
     }
 
     .navigation_div .search_container .search_button { 
@@ -84,16 +155,16 @@
 
 
     .navigation_div button.icon {
-        float: right;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
         display: block;
-        margin-left: 1%;
     }
 
     .navigation_div_responsive {
         position: relative;
         display: flex;
         flex-direction: column;
-
     }
 
     .nav_button {
@@ -111,7 +182,9 @@
         justify-content: center;
         align-items: center;
         background-color: #333;
-        border: 1px solid #333
+        border: 1px solid #333;
+        font-size: 17px;
+        
     }
 
     .navigation_div_responsive .search_container form {
@@ -141,8 +214,8 @@
 
     .navigation_div_responsive .icon {
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 1rem;
+        top: 1rem;
     }
 
     
